[package]
name = "hume-debug"
version = "0.1.0"
authors = ["Arthur Hugon <dev@planchon.xyz>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
console = "0.7"
dialoguer = "0.4"
openssl = "0.10"
openssl-probe = "0.1"
serde = "1.0"
serde_json = "1.0"
structopt = "0.2"
base64 = "0.10"
rand = "0.7"
arthur-hugon-tools = { git = "https://github.com/joxcat/arthur-hugon-tools.git", features = ["security","passwords"] }